Latest Home Screen Design

--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,8 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/montserrat</item>
         <item>@font/montserrat_black_italic</item>
+        <item>@font/montserrat_bold</item>
         <item>@font/montserrat_medium</item>
+        <item>@font/montserrat_semibold</item>
     </array>
 </resources>
